<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_variant"
    android:orientation="vertical"
    tools:context=".Ciudades">
//Act Ciudadessssss
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bMexico"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_mexico"
        android:textColor="#F134AB" />

    <Button
        android:id="@+id/bBerlin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_berlin"
        android:textColor="#F134ab" />

    <Button
        android:id="@+id/bmerida"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_merida"
        android:textColor="#F134ab" />

    <Button
        android:id="@+id/bCozumel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_cozumel"
        android:textColor="#F134ab" />
</LinearLayout>