<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_variant"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="156dp"
        android:text="@string/texto_grados"
        android:textColor="@color/color_grados"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="299dp"
        android:text="@string/texto_ciudad"
        android:textAlignment="center"
        android:textColor="@color/color_ciudad"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="365dp"
        android:text="@string/texto_estatus"
        android:textAlignment="center"
        android:textColor="@color/color_estatus"
        android:textSize="24sp" />
</RelativeLayout>